# ML_protein_ligand_prediction

./: .gitattributes  .gitignore  ML_protein_binnding_data_prep.ipynb  ML_protein_binnding_data_prep.py  ML_protein_binnding_model_building.ipynb  ML_protein_binnding_model_building.py  README.md  pyproject.toml
Data/processed/: aux_features.csv  cid_to_row.pkl  cid_to_smiles.pkl  combined_data.csv  ligand_desc.npy  ligand_fp.npz  protein_embeddings.pkl
Notebooks/: ML_protein_binnding_data_prep.ipynb  ML_protein_binnding_model_building.ipynb  protein_ligand_binding_prediction.ipynb  requirements_data_prep.txt  requirements_model_build.txt
Presentation/: 2024 Prediction of Protein-Molecular bindings.pptx
Summary/: 2024 Protein to ligand binding prediction.docx
data_prep/: README.md  __init__.py  example_usage.py  pipeline.py  requirements.txt
data_prep/config/: __init__.py  config.py
data_prep/processors/: __init__.py  data_preprocessor.py  ligand_processor.py  protein_processor.py
data_prep/utils/: __init__.py  data_utils.py
model_training/: README.md  __init__.py  example_usage.py  pipeline.py  requirements.txt
model_training/config/: __init__.py  config.py
model_training/data_loader/: __init__.py  (+1 more)
outputs/: model_comparison.csv  results.json
plans/: optimization_plan.md
scripts/: generate_figures.py  generate_presentation.py  run_data_prep.py  run_training.py
tests/: conftest.py  test_evaluator.py  test_feature_engineer.py  test_interpretability.py  test_model_factory.py  test_models.py  test_preprocessor.py  test_splitter.py
(+1679 files in other folders)
