[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plbind"
version = "0.1.0"
description = "Protein-ligand binding affinity prediction"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "torch>=2.0",
    "transformers>=4.36",
    "rdkit>=2023.9",
    "requests>=2.31",
    "shap>=0.44",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "joblib>=1.3",
    "plotly>=5.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "black", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
